<?xml version="1.0"?>
<package format="2">
  <name>pluto_camera_sense</name>
  <version>1.0.1</version>
  <description>PlutoCamera ROS interface using PlutoCam Python library</description>

  
  <maintainer email="developers@dronaaviation.com">Drona Aviation</maintainer>


  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Python dependencies -->
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  
  <!-- Message dependencies -->
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <!-- Image transport dependencies -->
  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
